--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,15 @@ org.gradle.jvmargs=-Xmx2G -XX:+UseG1GC
 #org.gradle.parallel=true // parallel builds are not supported by the maven central staging repository
 
 # Project Details
-maven_group=de.florianmichael.baseproject
-maven_name=BaseProject
+maven_group=de.florianmichael.textdisplayfix
+maven_name=EnZasRenderGlitchPatchModForMinecraft
 maven_version=1.0.0-SNAPSHOT
-maven_description=Gradle template project with jar signing, publishing to maven central and GitHub workflows.
+maven_description=Fixes text display entity background height inaccuracy
+
+# Minecraft/Fabric
+minecraft_version=1.21.1
+yarn_version=1.21.1+build.3
+loader_version=0.16.2
+
+# Set to empty to use the Minecraft version above
+supported_versions=>=1.21 <=1.21.1
