--- a/settings.gradle
+++ b/settings.gradle
@@ -1,8 +1,11 @@
 pluginManagement {
     repositories {
+        maven {
+            name = "Fabric"
+            url = "https://maven.fabricmc.net/"
+        }
         mavenCentral()
         gradlePluginPortal()
     }
 }
 
-rootProject.name = "BaseProject"
