--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@ org.gradle.jvmargs=-Xmx2G -XX:+UseG1GC
 # Project Details
 maven_group=de.florianmichael.textdisplayfix
 maven_name=EnZasRenderGlitchPatchModForMinecraft
-maven_version=1.0.0-SNAPSHOT
+maven_version=1.0.0
 maven_description=Fixes text display entity background height inaccuracy
 
 # Minecraft/Fabric
